modified:   css/style.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
 <body>
     <main>
         <header>
-            <h1>Heading</h1>
+            <h1 class="shadow">The Title</h1>
         </header>
 
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas deserunt sint quos incidunt ipsa at qui enim, nesciunt iusto aliquid consectetur molestias! Ex, sint? Voluptate porro, est rerum voluptatum quasi dolorem enim rem adipisci ex quas fugit excepturi perspiciatis numquam quia ea laudantium fugiat ut pariatur? Blanditiis ab necessitatibus beatae quasi, suscipit enim doloribus nemo debitis corrupti iusto? Dignissimos nemo ipsam laborum. Quisquam libero tenetur, illo modi praesentium doloremque odit officia ipsum tempora. Iure corporis, ab, doloribus provident nam ex labore quibusdam adipisci aliquid eaque fugiat soluta alias incidunt autem voluptates beatae molestiae deserunt omnis quos nihil accusamus natus eveniet?</p>
+        <div class="col"><h4>Lorem, ipsum.</h4>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas deserunt sint quos incidunt ipsa at qui enim, nesciunt iusto aliquid consectetur molestias! Ex, sint? Voluptate porro, est rerum voluptatum quasi dolorem enim rem adipisci ex quas fugit excepturi perspiciatis numquam quia ea laudantium fugiat ut pariatur? Blanditiis ab necessitatibus beatae quasi, suscipit enim doloribus nemo debitis corrupti iusto? Dignissimos nemo ipsam laborum. Quisquam libero tenetur, illo modi praesentium doloremque odit officia ipsum tempora. Iure corporis, ab, doloribus provident nam ex labore quibusdam adipisci aliquid eaque fugiat soluta alias incidunt autem voluptates beatae molestiae deserunt omnis quos nihil accusamus natus eveniet?</p>
+        </div>
     </main>
 
     <footer>
-        <a href="#">LinkedIn</a>
+        <a href="https://twitter.com" target="_blank">Twitter</a>
     </footer>
     
 </body>
